tests/pos/misc/callable-interface.ts
interface Foo {
	(): number;
    (x:string): string;
}
