tests/neg/simple/off_by_one.ts

declare function bar(x: string): void;

function foo(x: number): void {

  bar(x);

}
